<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">enviroCar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_garage">My Garage</string>
    <string name="activity_checklist_title">Checklist</string>
    <string name="checklist_item_bluetooth_enabled">Bluetooth enabled</string>
    <string name="checklist_item_bluetooth_disabled">Bluetooth not enabled</string>
    <string name="checklist_item_obd_paired">OBD adapter paired</string>
    <string name="checklist_item_obd_not_paired">OBD adapter not paired</string>
    <string name="checklist_item_obd_connected">OBD adapter connected</string>
    <string name="checklist_item_obd_not_connected">OBD adapter not connected</string>
    <string name="checklist_item_obd_service_enabled">OBD service enabled</string>
    <string name="checklist_item_obd_service_disabled">OBD service not enabled</string>
    <string name="checklist_item_gps_enabled">GPS enabled</string>
    <string name="checklist_item_gps_disabled">GPS not enabled</string>
    <string name="checklist_item_not_signed_in">Not signed in</string>
    <string name="checklist_item_signed_in">Signed in</string>
    <string name="textView">TextView</string>
    <string name="measurement">Measurement</string>
    <string name="id">ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>
    <string name="tps">Throttle Position</string>
    <string name="rpm">RPM</string>
    <string name="speed">Speed</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="intake_pressure">Intake Pressure</string>
    <string name="intake_temperature">Intake Temperature</string>
    <string name="sttb1">Short Term Trim Bank 1</string>
    <string name="lttb1">Long Term Trim Bank 1</string>
    <string name="maf">MAF</string>
    <string name="engine_load">Engine Load</string>
    <string name="car">Car</string>
    <string name="currentCO2">Current Co2 Emissions</string>
    <string name="drivingStyleRating">Driving Style Rating</string>
    <string name="moneySpent">Money spent for this trip</string>
    <string name="title_activity_map">Driven Route</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="messages">Nachrichten</string>
    <string name="performance">Leistung</string>
    <string name="auto">Auto</string>
    <string name="car2">"Car: "</string>
    <string name="duration">"Duration: "</string>
    <string name="begin">"Begin: "</string>
    <string name="end">"End: "</string>
    <string name="length">"Length: "</string>
    <string name="Co2emission">"CO\u2082 emission: "</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="currentSpeed">Current Speed</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_login">Sign in/Register</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="register_car">Register Car</string>
    <string name="register_car_progress">Register Car Progress</string>
    <string name="prompt_car_model">Car model</string>
    <string name="prompt_car_manufacturer">Car manufacturer</string>
    <string name="prompt_car_constructionYear">Construction year</string>
    <string name="logged_in_as">Signed in as %1$s</string>
    <string name="editName">Edit Name</string>
    <string name="deleteTrack">Delete Track</string>
    <string name="uploadTrack">Upload Track</string>
	<string name="dashboard_sensor_title">Current Car:</string>
	<string name="retry">Retry</string>
	<string name="description">Description:</string>
	<string name="editDescription">Edit Description</string>
	<string name="editTrack">Edit Track</string>
	<string name="enterTrackName">Enter trackname</string>
	<string name="enterTrackDescription">Enter track description</string>
	<string name="nameChanged">Name changed</string>
	<string name="descriptionChanged">Description changed</string>
	<string name="trackDeleted">Track deleted</string>
	<string name="upload_notification">Attempting to upload local tracks.</string>
	<string name="upload_notification_success">Successfully uploaded local tracks.</string>
	<string name="no_sensor_selected">No Car selected</string>
	<string name="title_create_new_sensor">&#8230;or create a new car:</string>
	<string name="startMap">View in map</string>
	<string name="title_select_sensor">Select an existing car,</string>
	<string name="please_select">&#8230;</string>
	<string name="trackContainsNoCoordinates">Track contains no coordinates.</string>
	<string name="noSdCard">"Map cannot be shown without SD card."</string>
	
	<string name="open_drawer">Open</string>
	<string name="close_drawer">Close</string>
	
	<string name="menu_logout">Sign out</string>
	<string name="menu_register">Register</string>
	
	<string name="dashboard">Dashboard</string>
	<string name="my_tracks">My Tracks</string>
	
	<string name="welcome_message">Welcome, </string>
</resources>