<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vehicle_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:tag="OBDFragment" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoConnect" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadOnly"
        android:textOff="@string/uploadMobileInternet"
        android:textOn="@string/uploadOnly" />

    <TextView
        android:id="@+id/rpm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rpm" />

    <TextView
        android:id="@+id/spd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/throttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tps" />

    <TextView
        android:id="@+id/fuelconsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_consumption" />

    <TextView
        android:id="@+id/engineLoadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engine_load" />

    <TextView
        android:id="@+id/fueltypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_type" />

    <TextView
        android:id="@+id/mafText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maf" />

    <TextView
        android:id="@+id/intakeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake_pressure" />

    <TextView
        android:id="@+id/intakeTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake_temperature" />

    <TextView
        android:id="@+id/shortTrimText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sttb1" />

    <TextView
        android:id="@+id/longTrimText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lttb1" />

    <TextView
        android:id="@+id/carText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

</LinearLayout>