<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_start"/>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_stop"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_upload"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/menu_upload"/>    
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>