<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".registerActivity" 
    android:id="@+id/mygaragelayout">


    <LinearLayout
        android:id="@+id/addCarToGarage_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/addCarToGarage_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/register_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- register car at server form -->

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/addCarToGarage_car_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_manufacturer"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_model"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/addCarToGarage_car_constructionYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_constructionYear" 
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/radiogroup_fueltype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_gasoline"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/gasoline" />

                <RadioButton
                    android:id="@+id/radio_diesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/diesel" />
                
                <RadioButton
                    android:id="@+id/radio_electric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/electric" />
            </RadioGroup>

            <Button
                android:id="@+id/register_car_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register_car" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
