<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myNamespace="http://schemas.android.com/apk/res/car.io"
    android:id="@+id/vehicle_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:tag="Dashboard" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/currentSpeed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <car.io.views.RoundProgress
        android:id="@+id/blue_progress_bar2"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:layout_alignParentBottom="true"
        android:padding="3dip"
        myNamespace:max="100"
        myNamespace:progress="50"
        myNamespace:progressDrawable="@drawable/red_progress_clip"
        myNamespace:track="@drawable/progress_bar_fill_bg"
    />
    
    <TextView
        android:id="@+id/textViewSpeedDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/currentCO2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <car.io.views.RoundProgress
        android:id="@+id/blue_progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:layout_alignParentBottom="true"
        android:padding="3dip"
        myNamespace:max="100"
        myNamespace:progress="50"
        myNamespace:progressDrawable="@drawable/red_progress_clip"
        myNamespace:track="@drawable/progress_bar_fill_bg"
    />

    <TextView
        android:id="@+id/co2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/drivingStyleRating"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/moneySpent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@drawable/ab_background_cario_gradient" />

</LinearLayout>
